--- a/roles/filetree_create/templates/gitlab_vars.yml.j2
+++ b/roles/filetree_create/templates/gitlab_vars.yml.j2
@@ -3,4 +3,4 @@ gitlab_validate_certs: {{ gitlab_validate_certs }}
 gitlab_group: {{ gitlab_group }}
 gitlab_subgroup: {{ gitlab_subgroup | default(omit, true) }}
 gitlab_project: {{ gitlab_project }}
-workflow_job_template_name: "{{ gitlab_project }} CasC_AAP_Workflow"
+workflow_job_template_name: "{{ gitlab_project }} WF_CasC_Ctrl"
