--- a/roles/filetree_create/templates/yamllint.yml.j2
+++ b/roles/filetree_create/templates/yamllint.yml.j2
@@ -1,5 +1,5 @@
-{%- raw %}
 ---
+{%- raw %}
 extends: default
 
 ignore: |
@@ -39,5 +39,5 @@ rules:
       - 'true'
       - 'false'
       - 'on'
+{% endraw -%}
 ...
-{%- endraw %}
