--- a/roles/filetree_create/templates/controller_hosts.j2
+++ b/roles/filetree_create/templates/controller_hosts.j2
@@ -1,8 +1,8 @@
 ---
-controller_hosts:
+controller_hosts: []
 {%- raw %}
-  - name: localhost
-    description: localhost
-    inventory: "{{ orgs }} Localhost"
+#  - name: localhost
+#    description: localhost
+#    inventory: "{{ orgs }} Localhost"
 {% endraw %}
 ...
