--- a/roles/filetree_create/templates/gitlab-ci.yml.j2
+++ b/roles/filetree_create/templates/gitlab-ci.yml.j2
@@ -1,6 +1,5 @@
 ---
 {%- raw %}
----
 stages:
   - lint
   - release
@@ -24,6 +23,8 @@ release_job:
     - casc
     - controller-group
   rules:
+    - if: $CI_COMMIT_MESSAGE =~ /First Commit/
+      when: never                                  # Do not run this job when a commit message
     - if: $CI_COMMIT_TAG
       when: never                                  # Do not run this job when a tag is created manually
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH  # Run this job when commits are pushed or merged to the default branch
