--- a/roles/filetree_create/templates/controller_projects.j2
+++ b/roles/filetree_create/templates/controller_projects.j2
@@ -8,7 +8,7 @@ controller_projects:
 {% endraw %}
     scm_url: "{{ gitlab_project_creation.project.http_url_to_repo }}"
 {%- raw %}
-    scm_branch: "{{ gitlab_scm_branch | default(env) }}"
+    scm_branch: "{{ casc_gitlab_scm_branch | default(env) }}"
     scm_clean: false
     scm_delete_on_update: false
     scm_update_on_launch: false
