--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -31,8 +31,8 @@ controller_credentials:
 {%- raw %}
       token: "Hub - Token"
 
-  - name: "{{ orgs }} {{ env }} AAP Credentials"
-    description: "{ orgs }} {{ env }} Ansible Automation Platform Credentials"
+  - name: "{{ orgs }} {{ env }} AAP Credential"
+    description: "{ orgs }} {{ env }} Ansible Automation Platform Credential"
     credential_type: "Red Hat Ansible Automation Platform"
     organization: "{{ orgs }}"
     inputs:
@@ -41,8 +41,8 @@ controller_credentials:
       password: "{{ controller_password }}"
       verify_ssl: "{{ controller_validate_certs }}"
 
-  - name: "{{ orgs }} {{ env }} Vault Credentials"
-    description: "{{ orgs }} {{ env }} Vault Credentials"
+  - name: "{{ orgs }} {{ env }} Vault Credential"
+    description: "{{ orgs }} {{ env }} Vault Credential"
     credential_type: "Vault"
     organization: "{{ orgs }}"
     inputs:
