Rollback templates to use playbooks logic within each org

--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -160,7 +160,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
 {% endraw %}
    ```
 
-   File: `orgs_vars/casc-twitch-demo/env/common/controller_job_templates.d/new_job_template.yaml`
+   File: `orgs_vars/{{ gitlab_project }}/env/common/controller_job_templates.d/new_job_template.yaml`
    ```yaml
 {%- raw %}
    ---
