--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -48,15 +48,15 @@ controller_credentials:
     inputs:
       vault_password: "password"
 
-#  - name: "{{ orgs }} {{ env }} Gitlab Credential"
-#    description: "{{ orgs }} {{ env }} Gitlab Credential"
-#    credential_type: "Source Control"
-#    organization: "{{ orgs }}"
-#    inputs:
-#      username: 'aap-demo'
-#      ssh_key_data: |
-#        -----BEGIN OPENSSH PRIVATE KEY-----
-#        e+hmzrLh33NWOQy98knTvNZaXM+1xy6qHLTDqUA8BlueNKfMKcz39IfONO/6ZVxiDYLWxb
-#        -----END OPENSSH PRIVATE KEY-----
+  - name: "{{ orgs }} {{ env }} Gitlab Credential"
+    description: "{{ orgs }} {{ env }} Gitlab Credential"
+    credential_type: "Source Control"
+    organization: "{{ orgs }}"
+    inputs:
+      username: 'aap-demo'
+      ssh_key_data: |
+        -----BEGIN OPENSSH PRIVATE KEY-----
+        e+hmzrLh33NWOQy98knTvNZaXM+1xy6qHLTDqUA8BlueNKfMKcz39IfONO/6ZVxiDYLWxb
+        -----END OPENSSH PRIVATE KEY-----
 {% endraw %}
 ...
