--- a/roles/filetree_create/templates/controller_inventories.j2
+++ b/roles/filetree_create/templates/controller_inventories.j2
@@ -1,8 +1,8 @@
 ---
 controller_inventories: []
 {%- raw %}
-#  - name: "{{ orgs }} Localhost"
-#    description: "Inventory for the Localhost"
-#    organization: "{{ orgs }}"
+  - name: "{{ orgs }} Localhost"
+    description: "Inventory for the Localhost"
+    organization: "{{ orgs }}"
 {% endraw %}
 ...
