--- a/roles/filetree_create/templates/gitignore.j2
+++ b/roles/filetree_create/templates/gitignore.j2
@@ -1,13 +1,8 @@
 collections/*
 roles
+*artifact*
+ansible-navigator.log
 ansible.cfg
 .*.swp
 .vault_password
 .vault_pass.txt
-config-controller-filetree-artifact*
-ansible-navigator.log
-configs
-controller_settings_ldap1.yml
-play_desired_state
-roles_old
-ansible.cfg.ori
