--- a/roles/filetree_create/templates/controller_inventories.j2
+++ b/roles/filetree_create/templates/controller_inventories.j2
@@ -1,5 +1,5 @@
 ---
-controller_inventories: []
+controller_inventories:
 {%- raw %}
   - name: "{{ orgs }} Localhost"
     description: "Inventory for the Localhost"
