--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -91,7 +91,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
    * Approve the Merge Request.
      ![New Merge Request Pro](images/newmrtodev-0-step3.png "Merge the merge request")
 
-9. Pomote the `dev` branch to pro (`pro` branch)
+9. Promote the `dev` branch to pro (`pro` branch)
 
    * Select the source branch as `dev` and `pro` as the destination one]
      ![New Merge Request Pro](images/newmrtopro.png "New Merge Request Pro")
@@ -230,10 +230,13 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
 
    * Go to Merge Requests and create a new merge request
      ![New merge request](images/mrtodev.png "New merge request")
+
    * Select the source branch `add_info_job_template` and `dev` as the destination one
      ![New merge request to dev](images/newmrtodev.png "New merge request to dev")
+
    * Fill in the merge request information
      ![Fill in the merge request information](images/newmrtodevstep2.png "Fill in the merge request information")
+
    * Merge the merge request
      ![Merge the merge request](images/newmrtodevstep3.png "Merge the merge request")
 
