--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -9,7 +9,7 @@ controller_credentials:
 {% endraw %}
       url: "https://{{ automation_hub }}/api/galaxy/content/community/"
 {%- raw %}
-      token: "Hub - Token"
+      token: "ToDo"
 
   - name: "{{ orgs }} {{ env }} Automation Hub Published Repository"
     description: ""
@@ -19,7 +19,7 @@ controller_credentials:
 {% endraw %}
       url: "https://{{ automation_hub }}/api/galaxy/content/published/"
 {%- raw %}
-      token: "Hub - Token"
+      token: "ToDo"
 
   - name: "{{ orgs }} {{ env }} Automation Hub RH Certified Repository"
     description: ""
@@ -29,7 +29,7 @@ controller_credentials:
 {% endraw %}
       url: "https://{{ automation_hub }}/api/galaxy/content/rh-certified/"
 {%- raw %}
-      token: "Hub - Token"
+      token: "ToDo"
 
   - name: "{{ orgs }} {{ env }} AAP Credential"
     description: "{ orgs }} {{ env }} Ansible Automation Platform Credential"
@@ -46,7 +46,7 @@ controller_credentials:
     credential_type: "Vault"
     organization: "{{ orgs }}"
     inputs:
-      vault_password: "password"
+      vault_password: "ToDo"
 
   - name: "{{ orgs }} {{ env }} Gitlab Credential"
     description: "{{ orgs }} {{ env }} Gitlab Credential"
@@ -56,7 +56,16 @@ controller_credentials:
       username: 'aap-demo'
       ssh_key_data: |
         -----BEGIN OPENSSH PRIVATE KEY-----
-        e+hmzrLh33NWOQy98knTvNZaXM+1xy6qHLTDqUA8BlueNKfMKcz39IfONO/6ZVxiDYLWxb
+        ToDo
         -----END OPENSSH PRIVATE KEY-----
+
+  - name: "{{ orgs }} {{ env }} GitLab API Token"
+    description: "{{ orgs }} {{ env }} GitLab API Token"
+    credential_type: "GitLab API Token"
+    organization: "{{ orgs }}"
+    inputs:
+      gitlab_token: "ToDo"
+      gitlab_email: "ToDo"
+      gitlab_user: "ToDo"
 {% endraw %}
 ...
