typo readme template

--- a/roles/filetree_create/templates/README.md.j2
+++ b/roles/filetree_create/templates/README.md.j2
@@ -28,8 +28,8 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
    ansible-vault encrypt group_vars/dev/configure_connection_controller_credentials.yml group_vars/pro/configure_connection_controller_credentials.yml
    ```
 
-3. Edit credentials object for day zero.
-   
+3. Edit credential objects for day zero.
+
    Automation Hub Token: b7d2b62539f8cd6d42f035985cc0e039078a988f
    Vault Password: Your choice.
    Gitlab Credential: Your SSH KEY for gitlab.
@@ -38,7 +38,7 @@ Before using CasC as a GitOps approach, it is needed to launch an initialization
      2. Right top, click profile icon and "Edit Profile"
      3. Click Access Tokens
      4. Select next day for Expiration Day and CasC-testathon as Token name.
-     5. Select scope Api 
+     5. Select scope Api
      6. Save generated token.
 
 
