remove credential type token gitlab

--- a/roles/filetree_create/templates/controller_credential_types.j2
+++ b/roles/filetree_create/templates/controller_credential_types.j2
@@ -1,35 +1,3 @@
 ---
-controller_credential_types:
-  - name: "GitLab API Token"
-    kind: "cloud"
-    state: present
-    inputs:
-      fields:
-        - id: "gitlab_token"
-          help_text: "gitlab API token"
-          label: "API Token"
-          type: "string"
-          secret: true
-        - id: "gitlab_user"
-          help_text: "gitlab API user"
-          label: "API User"
-          type: "string"
-        - id: "gitlab_email"
-          help_text: "gitlab API user email"
-          label: "API User email"
-          type: "string"
-        - id: "gitlab_verify"
-          label: "Verify SSL Certificates"
-          type: "boolean"
-          default: false
-      required:
-        - "gitlab_token"
-        - "gitlab_user"
-        - "gitlab_email"
-    injectors:
-      extra_vars:
-        gitlab_api_token: !unsafe '{{ gitlab_token }}'
-        gitlab_api_user: !unsafe '{{ gitlab_user }}'
-        gitlab_api_user_mail: !unsafe '{{ gitlab_email }}'
-        gitlab_validate_certs: !unsafe '{{ gitlab_verify }}'
+controller_credential_types: []
 ...
